[package]
name = "cypher-rust"
version = "0.0.1"
authors = ["michel.barnich@cyphercrypto.io"]
edition = "2021"

[dependencies]
hyper = {version =  "^0.14.23", features = ["full"]}
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
hyper-routing = "0.6.1"
lazy_static = "*"
regex = "*"
futures = "0.1.17"
futures-util = "0.3"