[package]
name = "cypher-rust"
version = "0.1.0"
authors = ["michel.barnich@cyphercrypto.io"]
edition = "2021"

[dependencies]
hyper = {version =  "^0.14.23", features = ["full"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
lazy_static = "*"
regex = "*"
futures = "0.1.17"
futures-util = "0.3"
rand = "0.8.5"
once_cell = "1.17.0"
tiny-bip39 = "1.0.0"
bitcoin = "0.29.2"
hex = "0.4.3"
secp256k1 = { version = "0.24.1", features= ["global-context"] }